--- a/index.html
+++ b/index.html
@@ -17,6 +17,23 @@
       <div class="cards">
         <!-- Your HTML code goes here. Please indicate where your code starts and ends  -->
         
+        <!-- ugwu Kasie html starts here -->
+        <div class="k-card">
+          <h3 class="k-title">21/11/2022 12:40AM</h3>
+          <div class="k-text">
+            <p>The week's shedule</p>
+            <ul class="list">
+              <li>Organize my calendar for the week</li>
+              <li>Complete my assignments</li>
+              <li>Online marketing on facebook and instagram</li>
+              <li>Call potential customers</li>
+              <li>Read about CSS Grid</li>
+            </ul>
+          </div>
+          <img src="./images/cancel.png" alt="Cancel button" class="k-cancel" />
+          <img src="./images/pin.png" alt="Pin" class="k-pin">
+        </div>
+        <!-- Ugwu Kasie html ends here -->
       </div>
     </main>
   </body>
