adding iyanu's card

--- a/index.html
+++ b/index.html
@@ -34,6 +34,21 @@
           <img src="./images/pin.png" alt="Pin" class="k-pin">
         </div>
         <!-- Ugwu Kasie html ends here -->
+
+        <!--Iyanuoluwa Odulate html starts here-->
+        <div class="iy-card">
+          <h3 class="iy-title">22/11/2022 10:53 AM</h3>
+          <div class="iy-text">
+            <p>My weekly schedule</p>
+            <ul class="iy-list">
+            <li>Complete my assignments</li>
+            <li>Complete pending orders</li>
+            <li>Attend crossfires</li>
+            <li>Watch CSS videos on Youtube</li>
+            </ul>
+          </div>
+        </div>
+        <!--Iyanuoluwa Odulate html ends here-->
       </div>
     </main>
   </body>
