I added the third purple sticky card

--- a/index.html
+++ b/index.html
@@ -49,6 +49,28 @@
           </div>
         </div>
         <!--Iyanuoluwa Odulate html ends here-->
+
+        <!-- Halimat Adebakin html starts here -->
+        <div class="ha-card">
+          <h3 class="ha-title">23/11/2022 9:00 AM</h3>
+          <div class="ha-text">
+            <p>My weekly schedule</p>
+            <ul class="ha-list">
+              <li>Go for class</li>
+              <li>Submit my assignments</li>
+              <li>Study in the library</li>
+              <li>Work on my projects</li>
+              <li>Attend meetings</li>
+              <li>Do my laundry</li>
+              <li>Attend live session</li>
+              <li>Prepare Dinner</li>
+              <li>Clone Netflix landing page</li>
+            </ul>
+          </div>
+          <img src="./images/cancel.png" alt="Cancel button" class="ha-cancel" />
+          <img src="./images/pin.png" alt="Pin" class="ha-pin">
+        </div>
+        <!-- Halimat Adebakin html ends here -->
       </div>
     </main>
   </body>
