added the fourth sticky card

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main class="container">
       <div class="cards">
         <!-- Your HTML code goes here. Please indicate where your code starts and ends  -->
-        
+
         <!-- ugwu Kasie html starts here -->
         <div class="k-card">
           <h3 class="k-title">21/11/2022 12:40AM</h3>
@@ -41,10 +41,10 @@
           <div class="iy-text">
             <p>My weekly schedule</p>
             <ul class="iy-list">
-            <li>Complete my assignments</li>
-            <li>Complete pending orders</li>
-            <li>Attend crossfires</li>
-            <li>Watch CSS videos on Youtube</li>
+              <li>Complete my assignments</li>
+              <li>Complete pending orders</li>
+              <li>Attend crossfires</li>
+              <li>Watch CSS videos on Youtube</li>
             </ul>
           </div>
         </div>
@@ -67,10 +67,38 @@
               <li>Clone Netflix landing page</li>
             </ul>
           </div>
-          <img src="./images/cancel.png" alt="Cancel button" class="ha-cancel" />
+          <img
+            src="./images/cancel.png"
+            alt="Cancel button"
+            class="ha-cancel"
+          />
           <img src="./images/pin.png" alt="Pin" class="ha-pin">
         </div>
         <!-- Halimat Adebakin html ends here -->
+
+        <!-- Taofeekat Olorunkosebi html starts here -->
+        <div class="tee-card">
+          <h3 class="tee-title">25/11/2022 10:30 PM</h3>
+          <div class="tee-text">
+            <p>My schedule for the week</p>
+            <ul class="tee-list">
+              <li>Attend lectures</li>
+              <li>Read my books</li>
+              <li>Attend stutern live sessions</li>
+              <li>Work on my projects</li>
+              <li>Pray</li>
+              <li>Complete AMEP application</li>
+              <li>Complete my Udemy landing page project</li>
+            </ul>
+          </div>
+          <img
+            src="./images/cancel.png"
+            alt="Cancel button"
+            class="tee-cancel"
+          />
+          <img src="./images/pin.png" alt="Pin" class="tee-pin" />
+        </div>
+        <!-- Taofeekat Olorunkosebi html ends here -->
       </div>
     </main>
   </body>
